--- a/commands.html
+++ b/commands.html
@@ -1,1 +1,134 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>M1 Bot Commands</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: #0e0e0e;
+      font-family: 'Segoe UI', sans-serif;
+      color: #00f2ff;
+      padding: 20px;
+    }
 
+    h1 {
+      text-align: center;
+      color: #00f2ff;
+      margin-bottom: 40px;
+      font-size: 2.5em;
+    }
+
+    .category {
+      background-color: #1a1a1a;
+      border-left: 5px solid #00f2ff;
+      margin-bottom: 40px;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 15px #00f2ff33;
+      transition: transform 0.3s ease;
+    }
+
+    .category:hover {
+      transform: translateY(-5px);
+    }
+
+    .category h2 {
+      margin-top: 0;
+      color: #00f2ff;
+      border-bottom: 2px solid #00f2ff33;
+      padding-bottom: 5px;
+    }
+
+    .command {
+      margin-bottom: 20px;
+    }
+
+    .command p {
+      margin: 0;
+    }
+
+    .command img {
+      width: 100%;
+      max-width: 600px;
+      border-radius: 5px;
+      margin-top: 10px;
+      box-shadow: 0 0 10px #00f2ff55;
+      transition: transform 0.3s ease;
+    }
+
+    .command img:hover {
+      transform: scale(1.02);
+    }
+
+    @media (max-width: 768px) {
+      .command img {
+        width: 100%;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <h1>🤖 M1 Bot Commands</h1>
+
+  <!-- Moderation -->
+  <div class="category">
+    <h2>🛡️ Moderation</h2>
+    <div class="command">
+      <p><strong>M1warn @user @reason</strong> - Warn a member</p>
+      <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608734859624600/IMG_4023.png?ex=687eb4be&is=687d633e&hm=e69ba691d77916997de9d564ab13970051c562c9c8bf367de622b009d06a42ed&" alt="Warn command">
+    </div>
+    <div class="command">
+      <p><strong>M1warnings @user</strong> - Check member warnings</p>
+      <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608735195172885/IMG_4024.png?ex=687eb4be&is=687d633e&hm=835b98a809a0b0b0aef0fa2a209db47ef1391f91e67256b47b90af68dee0e3d6&" alt="warnings command">
+    </div>
+  </div>
+
+  <!-- Utility -->
+  <div class="category">
+    <h2>🛠️ Utility</h2>
+    <div class="command">
+      <p><strong>M1purge [3 - 100]</strong> - Bulk delete messages</p>
+      <img src="" alt="purge command">
+    </div>
+    <div class="command">
+      <p><strong>M1ping</strong> - Check latency</p>
+      <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608735509610727/IMG_4025.png?ex=687eb4be&is=687d633e&hm=f9b43d3e1c1621dd03ccdc70855b8acf6005b9c8d965735bb24d5a11aef5668e&" alt="Ping command">
+    </div>
+  </div>
+
+  <!-- Fun -->
+  <div class="category">
+    <h2>🎉 Fun</h2>
+    <div class="command">
+      <p><strong>M18ball</strong> - Ask the magic 8ball(yes or no questions)</p>
+      <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608735752749056/IMG_4026.png?ex=687eb4be&is=687d633e&hm=4e5251d169fe74ffa83018fc62dc47df858a3d82d49304377a15c7a14af66ba8&" alt="8ball command">
+    </div>
+  </div>
+
+  <!-- League -->
+  <div class="category">
+    <h2>🏆 League</h2>
+    <div class="command">
+      <p><strong>M1sign @user @teamRole</strong> - Sign a player to a team</p>
+      <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396612002050474006/IMG_4028.png?ex=687eb7c9&is=687d6649&hm=f7308f18464aa34941fcf6eeb4e6488abfbb9fd78044b68e458be2441e340506&" alt="Sign command">
+    </div>
+    <div class="command">
+      <p><strong>M1release @user @teamRole</strong> - Release a player from a team</p>
+      <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396612006286721074/IMG_4029.png?ex=687eb7ca&is=687d664a&hm=6aeb0013c925e2fa3eed4c27d411e86d272674bf9f9bd10e10906dceddb3f900&" alt="Release command">
+    </div>
+  </div>
+
+  <!-- Legal -->
+  <div class="category">
+    <h2>⚖️ Legal</h2>
+    <div class="command">
+      <p><strong>M1legal</strong> - View bots legal documents</p>
+      <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396610429920215050/IMG_4027.png?ex=687eb652&is=687d64d2&hm=ce6e130aa352b80e8a75bbaa09e136708b8ac6488df4fa18be4b5fc8cd19ecfd&" alt="Legal command">
+    </div>
+  </div>
+
+</body>
+</html>
