--- a/commands.html
+++ b/commands.html
@@ -91,7 +91,7 @@
     <h2>🛠️ Utility</h2>
     <div class="command">
       <p><strong>M1purge [3 - 100]</strong> - Bulk delete messages</p>
-      <img src="" alt="purge command">
+      <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396617479983206400/IMG_4034.jpg?ex=687ebce3&is=687d6b63&hm=bd78269e97fcfe106115983617c17c382ebefdef74fb9287e720ebf8ac74dc2b&" alt="purge command">
     </div>
     <div class="command">
       <p><strong>M1ping</strong> - Check latency</p>
