--- a/commands.html
+++ b/commands.html
@@ -26,7 +26,7 @@
       margin-bottom: 40px;
       padding: 20px;
       border-radius: 8px;
-      box-shadow: 0 0 15px #00f2ff33;
+      box-shadow: 0 0 15px #7200fe;
       transition: transform 0.3s ease;
     }
 
@@ -37,7 +37,7 @@
     .category h2 {
       margin-top: 0;
       color: #00f2ff;
-      border-bottom: 2px solid #00f2ff33;
+      border-bottom: 2px solid #7200fe;
       padding-bottom: 5px;
     }
 
