--- a/commands.html
+++ b/commands.html
@@ -82,7 +82,7 @@
   <div class="category">
     <h2>🛡️ Moderation</h2>
     <div class="command">
-      <p><strong>M1warn @user @reason</strong> - Warn a member</p>
+      <p><strong>M1warn @user [reason]</strong> - Warn a member</p>
       <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608734859624600/IMG_4023.png?ex=687eb4be&is=687d633e&hm=e69ba691d77916997de9d564ab13970051c562c9c8bf367de622b009d06a42ed&" alt="Warn command">
     </div>
     <div class="command">
@@ -108,7 +108,7 @@
   <div class="category">
     <h2>🎉 Fun</h2>
     <div class="command">
-      <p><strong>M18ball</strong> - Ask the magic 8ball(yes or no questions)</p>
+      <p><strong>M18ball [Yes or No Question]</strong> - Ask the magic 8ball(yes or no questions)</p>
       <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608735752749056/IMG_4026.png?ex=687eb4be&is=687d633e&hm=4e5251d169fe74ffa83018fc62dc47df858a3d82d49304377a15c7a14af66ba8&" alt="8ball command">
     </div>
   </div>
