--- a/commands.html
+++ b/commands.html
@@ -76,7 +76,7 @@
 </head>
 <body>
 
-  <h1>🤖 M1 Bot Commands</h1>
+  <h1> M1 Bot Commands</h1>
 
   <!-- Moderation -->
   <div class="category">
@@ -134,6 +134,16 @@
       <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396610429920215050/IMG_4027.png?ex=687eb652&is=687d64d2&hm=ce6e130aa352b80e8a75bbaa09e136708b8ac6488df4fa18be4b5fc8cd19ecfd&" alt="Legal command">
     </div>
   </div>
+
+  <!-- config -->
+  <div class="category">
+    <h2>configuration</h2>
+    <div class="command">
+      <p><strong>M1config</strong> - See current server config and command options</p>
+      <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396635252226527242/IMG_4035.png?ex=687ecd70&is=687d7bf0&hm=7b63a22023447529a9e344963ef467ae5a9b44ce9f832ddf9723a88b94dffd7e&" alt="config command">
+    </div>
+  </div>
+  
 
 </body>
 </html>
