--- a/commands.html
+++ b/commands.html
@@ -110,6 +110,8 @@
     <div class="command">
       <p><strong>M18ball [Yes or No Question]</strong> - Ask the magic 8ball(yes or no questions)</p>
       <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608735752749056/IMG_4026.png?ex=687eb4be&is=687d633e&hm=4e5251d169fe74ffa83018fc62dc47df858a3d82d49304377a15c7a14af66ba8&" alt="8ball command">
+      <p><strong>M1poll [Question]</strong> - Create a yes,no,maybe poll</p>
+      <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396636660183076874/IMG_4036.png?ex=687ecec0&is=687d7d40&hm=03ec60d61d9b8accc6eeb1a4d1668c9d9df5e2c1b33d57c1010357c16ae6a9b4&" alt="poll command">
     </div>
   </div>
 
@@ -137,7 +139,7 @@
 
   <!-- config -->
   <div class="category">
-    <h2>configuration</h2>
+    <h2>⚙️configuration</h2>
     <div class="command">
       <p><strong>M1config</strong> - See current server config and command options</p>
       <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396635252226527242/IMG_4035.png?ex=687ecd70&is=687d7bf0&hm=7b63a22023447529a9e344963ef467ae5a9b44ce9f832ddf9723a88b94dffd7e&" alt="config command">
@@ -147,3 +149,4 @@
 
 </body>
 </html>
+
