--- a/commands.html
+++ b/commands.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>M1 Bot Commands</title>
+  <p>Tip, send "M1help" in a server with the Bot</p>
   <style>
     body {
       margin: 0;
@@ -139,7 +140,7 @@
 
   <!-- config -->
   <div class="category">
-    <h2>⚙️configuration</h2>
+    <h2>⚙️ Configuration</h2>
     <div class="command">
       <p><strong>M1config</strong> - See current server config and command options</p>
       <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396635252226527242/IMG_4035.png?ex=687ecd70&is=687d7bf0&hm=7b63a22023447529a9e344963ef467ae5a9b44ce9f832ddf9723a88b94dffd7e&" alt="config command">
