--- a/commands.html
+++ b/commands.html
@@ -77,7 +77,7 @@
 <body>
 
   <h1> M1 Bot Commands</h1>
- <p>Tip, send "M1help" in a server with the Bot</p>
+ <p style="color: #8264fb;">Tip, send "M1help" in a server with the Bot</p>
 
   <!-- Moderation -->
   <div class="category">
