--- a/commands.html
+++ b/commands.html
@@ -92,6 +92,17 @@
     </div>
   </div>
 
+  <div class="command">
+  <div class="summary" onclick="toggleDetail(this)">
+    🔹 <code>M1kick @user</code> — Kicks a user from the server
+    <span class="toggle-indicator">▼ Show more</span>
+  </div>
+  <div class="details">
+    <p>This command removes the mentioned user from the server. It requires Kick Members permission. Logs the action if logging is configured in the server.</p>
+  </div>
+</div>
+
+
   <!-- Utility -->
   <div class="category">
     <h2>🛠️ Utility</h2>
