--- a/commands.html
+++ b/commands.html
@@ -72,6 +72,17 @@
         width: 100%;
       }
     }   
+    .details {
+  display: none;
+  margin-top: 10px;
+  color: #ccc;
+  transition: all 0.3s ease;
+}
+
+.details.expanded {
+  display: block;
+}
+
   </style>
 </head>
 <body>
