--- a/commands.html
+++ b/commands.html
@@ -106,25 +106,29 @@
  <p style="color: #8264fb;">Tip, send "M1help" in a server with the Bot</p>
 
   <!-- Moderation -->
+  <div class="command">
+  <div class="summary" onclick="toggleDetail(this)">
+    🔹 <code>M1warn @user [reason]</code> — Warn a member
+    <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608734859624600/IMG_4023.png?ex=687eb4be&is=687d633e&hm=e69ba691d77916997de9d564ab13970051c562c9c8bf367de622b009d06a42ed&" alt="Warn command">
+    </div>
+    <span class="toggle-indicator">▼ Show more</span>
+  </div>
+  <div class="details">
+    <p>Staff can use this command to warn members, it sends them a DM containing the warning info, and stores the warning count for that member in the database.</p>
+  </div>
+</div>
+
+
+  
   <div class="category">
     <h2>🛡️ Moderation</h2>
     <div class="command">
-    <div class="summary" onclick="toggleDetail(this)">  
-       🔹 <code>M1warn @user [reason]</code> — Warn a member.
+      <p><strong>M1warn @user [reason]</strong> - Warn a member</p>
       <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608734859624600/IMG_4023.png?ex=687eb4be&is=687d633e&hm=e69ba691d77916997de9d564ab13970051c562c9c8bf367de622b009d06a42ed&" alt="Warn command">
-      <span class="toggle-indicator">▼ Show More</span>
-        <div class="details">
-    <p>Staff can use this command to warn members, it sends them a DM containing the warning info, and stores the warning count for that member in the database.</p>
-  </div>
     </div>
     <div class="command">
-    <div class="summary" onclick="toggleDetail(this)">  
-        🔹 <code>M1Warnings @user</code> — Check member warnings.
+      <p><strong>M1warnings @user</strong> - Check member warnings</p>
       <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608735195172885/IMG_4024.png?ex=687eb4be&is=687d633e&hm=835b98a809a0b0b0aef0fa2a209db47ef1391f91e67256b47b90af68dee0e3d6&" alt="warnings command">
-   <span class="toggle-indicator">▼ Show More</span>
-        <div class="details">
-    <p>sending this command will fetch info from the Database containing the mentioned members warning info, it sends an embed contating the warning info.</p>
-  </div>
     </div>
   </div>
 
