--- a/commands.html
+++ b/commands.html
@@ -106,6 +106,18 @@
  <p style="color: #8264fb;">Tip, send "M1help" in a server with the Bot</p>
 
   <!-- Moderation -->
+  <div class="command">
+  <div class="summary" onclick="toggleDetail(this)">
+    🔹 <code>M1warn @user [reason]</code> — Warn a member
+    <span class="toggle-indicator">▼ Show more</span>
+  </div>
+  <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608734859624600/IMG_4023.png?ex=687eb4be&is=687d633e&hm=e69ba691d77916997de9d564ab13970051c562c9c8bf367de622b009d06a42ed&" 
+       alt="Warn command" class="command-image">
+  <div class="details">
+    <p>Staff can use this command to warn members. It sends them a DM with the warning info and stores their warning count in the server database.</p>
+  </div>
+</div>
+  
   <div class="category">
     <h2>🛡️ Moderation</h2>
     <div class="command">
