--- a/commands.html
+++ b/commands.html
@@ -76,7 +76,7 @@
   display: none;
   margin-top: 10px;
   color: #ccc;
-  transition: all 0.3s ease;
+  transition: all 0.5s ease;
 }
 
 .details.expanded {
@@ -107,27 +107,27 @@ function toggleDetail(button) {
     
   <div class="command">
   <div class="summary">
-    🔹 <code>M1warn @user [reason]</code> — Warn a member
+    🔹 <code><strong>M1warn @user [reason]</strong></code> — Warn a member
     <br>
     <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608734859624600/IMG_4023.png?ex=687eb4be&is=687d633e&hm=e69ba691d77916997de9d564ab13970051c562c9c8bf367de622b009d06a42ed&" alt="Warn command" style="width: 100%; height: auto; border-radius: 10px;">
     <br>
     <span class="toggle-indicator" onclick="toggleDetail(this)">▼ Show more</span>
   </div>
   <div class="details" style="display: none;">
-    <p>Staff can use this command to warn members. It sends them a DM with the warning info and stores their warning count in the database.</p>
+    <p><strong>Staff can use this command to warn members. It sends them a DM with the warning info and stores their warning count in the database.</strong></p>
   </div>
 </div>
 
   <div class="command">
   <div class="summary">
-    🔹 <code>M1warnings @user</code> — Check user warnings
+    🔹 <code><strong>M1warnings @user</strong></code> — Check user warnings
     <br>
     <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608735195172885/IMG_4024.png?ex=687eb4be&is=687d633e&hm=835b98a809a0b0b0aef0fa2a209db47ef1391f91e67256b47b90af68dee0e3d6&" alt="Warnings command" style="width: 100%; height: auto; border-radius: 10px;">
     <br>
     <span class="toggle-indicator" onclick="toggleDetail(this)">▼ Show more</span>
   </div>
   <div class="details" style="display: none;">
-    <p>use this command to chech member warnings. It fetches waring data from the database and replys with an embed containing the warning data for the mentioned memebr.</p>
+    <p><strong>use this command to check member warnings. It fetches warning data from the database and replys with an embed containing the warning data for the mentioned memebr.</strong></p>
   </div>
 </div>
     
