--- a/commands.html
+++ b/commands.html
@@ -131,95 +131,44 @@ function toggleDetail(button) {
   </div>
 </div>
     
-  <!-- Utility -->
-<div class="category">
-  <h2>🛠 Utility</h2>
-        
-<div class="command">
-  <div class="summary">
-    🔹 <code><strong>M1purge [3 - 100]</strong></code> — Bulk delete messages
-    <br>
-    <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396617479983206400/IMG_4034.jpg?ex=687ebce3&is=687d6b63&hm=bd78269e97fcfe106115983617c17c382ebefdef74fb9287e720ebf8ac74dc2b&" alt="purge command" style="width: 100%; height: auto; border-radius: 10px;">
-    <br>
-    <span class="toggle-indicator" onclick="toggleDetail(this)">▼ Show more</span>
-  </div>
-  <div class="details" style="display: none;">
-    <p><strong>Staff can use this command to bulk delete recent messages, usually less than 15 days old, the "M1purge" message counts as 1, only goes up to 100 and is recomended to be atleast 3.</strong></p>
-  </div>
-</div>
 
+  <!-- Utility -->
+  <div class="category">
+    <h2>🛠️ Utility</h2>
     <div class="command">
-  <div class="summary">
-    🔹 <code><strong>M1ping</strong></code> — Check latency
-    <br>
-    <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608735509610727/IMG_4025.png?ex=687eb4be&is=687d633e&hm=f9b43d3e1c1621dd03ccdc70855b8acf6005b9c8d965735bb24d5a11aef5668e&" alt="ping command" style="width: 100%; height: auto; border-radius: 10px;">
-    <br>
-    <span class="toggle-indicator" onclick="toggleDetail(this)">▼ Show more</span>
+      <p><strong>M1purge [3 - 100]</strong> - Bulk delete messages</p>
+      <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396617479983206400/IMG_4034.jpg?ex=687ebce3&is=687d6b63&hm=bd78269e97fcfe106115983617c17c382ebefdef74fb9287e720ebf8ac74dc2b&" alt="purge command">
+    </div>
+    <div class="command">
+      <p><strong>M1ping</strong> - Check latency</p>
+      <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608735509610727/IMG_4025.png?ex=687eb4be&is=687d633e&hm=f9b43d3e1c1621dd03ccdc70855b8acf6005b9c8d965735bb24d5a11aef5668e&" alt="Ping command">
+    </div>
   </div>
-  <div class="details" style="display: none;">
-    <p><strong>use this command to get current latency info.</strong></p>
-  </div>
-</div>
 
   <!-- Fun -->
   <div class="category">
     <h2>🎉 Fun</h2>
-
-<div class="command">
-  <div class="summary">
-    🔹 <code><strong>M18ball [Yes or No Question]</strong></code> — Ask the magic 8ball (yes or no questions)
-    <br>
-    <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608735752749056/IMG_4026.png?ex=687eb4be&is=687d633e&hm=4e5251d169fe74ffa83018fc62dc47df858a3d82d49304377a15c7a14af66ba8&" alt="8 ball command" style="width: 100%; height: auto; border-radius: 10px;">
-    <br>
-    <span class="toggle-indicator" onclick="toggleDetail(this)">▼ Show more</span>
-  </div>
-  <div class="details" style="display: none;">
-    <p><strong>use this command to ask the magic 8ball (yes or no Questions only).</strong></p>
-  </div>
-</div>
-
     <div class="command">
-  <div class="summary">
-    🔹 <code><strong>M1poll [Question]</strong></code> — Create a yes, no, maybe poll
-    <br>
-    <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396636660183076874/IMG_4036.png?ex=687ecec0&is=687d7d40&hm=03ec60d61d9b8accc6eeb1a4d1668c9d9df5e2c1b33d57c1010357c16ae6a9b4&" alt="Poll command" style="width: 100%; height: auto; border-radius: 10px;">
-    <br>
-    <span class="toggle-indicator" onclick="toggleDetail(this)">▼ Show more</span>
+      <p><strong>M18ball [Yes or No Question]</strong> - Ask the magic 8ball(yes or no questions)</p>
+      <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608735752749056/IMG_4026.png?ex=687eb4be&is=687d633e&hm=4e5251d169fe74ffa83018fc62dc47df858a3d82d49304377a15c7a14af66ba8&" alt="8ball command">
+      <p><strong>M1poll [Question]</strong> - Create a yes,no,maybe poll</p>
+      <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396636660183076874/IMG_4036.png?ex=687ecec0&is=687d7d40&hm=03ec60d61d9b8accc6eeb1a4d1668c9d9df5e2c1b33d57c1010357c16ae6a9b4&" alt="poll command">
+    </div>
   </div>
-  <div class="details" style="display: none;">
-    <p><strong>use this command to create an embed with the poll Qeuestion and thumbs up, thumbs down, and shrug reactions.</strong></p>
-  </div>
-</div>
 
   <!-- League -->
   <div class="category">
     <h2>🏆 League</h2>
-
-<div class="command">
-  <div class="summary">
-    🔹 <code><strong>M1sign @user @teamRole</strong></code> —  Sign a player to a team
-    <br>
-    <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396612002050474006/IMG_4028.png?ex=687eb7c9&is=687d6649&hm=f7308f18464aa34941fcf6eeb4e6488abfbb9fd78044b68e458be2441e340506&" alt="sign command" style="width: 100%; height: auto; border-radius: 10px;">
-    <br>
-    <span class="toggle-indicator" onclick="toggleDetail(this)">▼ Show more</span>
-  </div>
-  <div class="details" style="display: none;">
-    <p><strong>use this command to sign players to configured league teams.</strong></p>
-  </div>
-</div>
-
     <div class="command">
-  <div class="summary">
-    🔹 <code><strong>M1release @user @teamRole</strong></code> — Release a player from a team
-    <br>
-    <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396612006286721074/IMG_4029.png?ex=687eb7ca&is=687d664a&hm=6aeb0013c925e2fa3eed4c27d411e86d272674bf9f9bd10e10906dceddb3f900&" alt="release command" style="width: 100%; height: auto; border-radius: 10px;">
-    <br>
-    <span class="toggle-indicator" onclick="toggleDetail(this)">▼ Show more</span>
+      <p><strong>M1sign @user @teamRole</strong> - Sign a player to a team</p>
+      <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396612002050474006/IMG_4028.png?ex=687eb7c9&is=687d6649&hm=f7308f18464aa34941fcf6eeb4e6488abfbb9fd78044b68e458be2441e340506&" alt="Sign command">
+    </div>
+    <div class="command">
+      <p><strong>M1release @user @teamRole</strong> - Release a player from a team</p>
+      <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396612006286721074/IMG_4029.png?ex=687eb7ca&is=687d664a&hm=6aeb0013c925e2fa3eed4c27d411e86d272674bf9f9bd10e10906dceddb3f900&" alt="Release command">
+    </div>
   </div>
-  <div class="details" style="display: none;">
-    <p><strong>use this command to release players from a configured league teams.</strong></p>
-  </div>
-</div>
+
 
   <!-- Legal -->
   <div class="category">
