--- a/commands.html
+++ b/commands.html
@@ -141,9 +141,15 @@ function toggleDetail(button) {
     </div>
     <div class="command">
       <p><strong>M1ping</strong> - Check latency</p>
-      <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608735509610727/IMG_4025.png?ex=687eb4be&is=687d633e&hm=f9b43d3e1c1621dd03ccdc70855b8acf6005b9c8d965735bb24d5a11aef5668e&" alt="Ping command">
-    </div>
+    <br>
+    <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608735509610727/IMG_4025.png?ex=687eb4be&is=687d633e&hm=f9b43d3e1c1621dd03ccdc70855b8acf6005b9c8d965735bb24d5a11aef5668e&" alt="ping command" style="width: 100%; height: auto; border-radius: 10px;">
+    <br>
+    <span class="toggle-indicator" onclick="toggleDetail(this)">▼ Show more</span>
   </div>
+  <div class="details" style="display: none;">
+    <p><strong>Staff can use this command to warn members. It sends them a DM with the warning info and stores their warning count in the database.</strong></p>
+  </div>
+</div>
 
   <!-- Fun -->
   <div class="category">
