--- a/commands.html
+++ b/commands.html
@@ -127,20 +127,23 @@ function toggleDetail(button) {
   <div class="command">
     🔹 <code><strong>M1warn @user [reason]</strong></code> — Warn a member
     <br>
-    <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608734859624600/IMG_4023.png" alt="Warn command" style="width: 100%; height: auto; border-radius: 10px;">
+    <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608734859624600/IMG_4023.png?ex=688351fe&is=6882007e&hm=92dd82cd0ff4cf70d1f401d4f0de7067b3fb85c1fb6fc9a641281b070e999dd9&" alt="Warn command" style="width: 100%; height: auto; border-radius: 10px;">
     <br>
     <span class="toggle-indicator" onclick="toggleDetail(this)">▼ Show more</span>
+    <div class="details-wrapper">
     <div class="details">
       <p><strong>Staff can use this command to warn members. It sends them a DM with the warning info and stores their warning count in the database.</strong></p>
-    </div>
+     </div>
   </div>
+</div>
 
   <div class="command">
     🔹 <code><strong>M1warnings @user</strong></code> — Check user warnings
     <br>
-    <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608735195172885/IMG_4024.png" alt="Warnings command" style="width: 100%; height: auto; border-radius: 10px;">
+    <img src="https://cdn.discordapp.com/attachments/1386349290653225130/1396608735195172885/IMG_4024.png?ex=688351fe&is=6882007e&hm=e7c8da9852a0e8a490a5eb93a1d7837db099a7b767ecb0ec5122e51cdcfb04fa&" alt="Warnings command" style="width: 100%; height: auto; border-radius: 10px;">
     <br>
     <span class="toggle-indicator" onclick="toggleDetail(this)">▼ Show more</span>
+      <div class="details-wrapper">
     <div class="details">
       <p><strong>Use this command to check member warnings. It fetches warning data from the database and replies with an embed containing the warning data for the mentioned member.</strong></p>
     </div>
