--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   </div>
 
   <div class="content">
-    <h1>Welcome to the Home Page!</h1>
+    <h1 class="gradient-text">Welcome To The Homepage!</h1>
+<p class="gradient-text">Click on one of the options on the nav bar to see my worst creations!</p>
   </div>
 </body>
 </html>
