--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div class="navbar">
-    <a href="index.html">Home</a>
-    <a href="commands.html">Commands</a>
+    <a href="index.html" class="active">Home</a>
+    <a href="commands.html">M1 Bot</a>
     <a href="games.html">Games</a>
     <a href="updates.html">Updates</a>
     <a href="support.html">Support</a>
@@ -17,7 +17,7 @@
 
   <div class="content">
     <h1 class="gradient-text">Welcome To The Homepage!</h1>
-<p class="gradient-text">Click on one of the options on the nav bar to see my worst creations!</p>
+<p class="gradient-text">Click on one of the options on the nav bar to see some of my worst creations!</p>
   </div>
 </body>
 </html>
