--- a/support.html
+++ b/support.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<body>
+  <div class="navbar">
+    <a href="index.html">Home</a>
+    <a href="commands.html">Commands</a>
+    <a href="games.html">Games</a>
+    <a href="updates.html">Updates</a>
+    <a href="support.html">Support</a>
+  </div>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Support Page!</title>
