--- a/games.html
+++ b/games.html
@@ -11,4 +11,5 @@
   </div>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Games Page!</title>
+   <div class="content">
+    <h1 class="gradient-text">Welcome To The Games Page!</h1>
