--- a/support.html
+++ b/support.html
@@ -11,4 +11,5 @@
   </div>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Support Page!</title>
+  <div class="content">
+    <h1 class="gradient-text">Welcome To The Support Page!</h1>
