--- a/games.html
+++ b/games.html
@@ -10,7 +10,7 @@
   <div class="navbar">
     <a href="index.html">Home</a>
     <a href="commands.html">Commands</a>
-    <a href="games.html">Games</a>
+    <a href="games.html" class="active">Games</a>
     <a href="updates.html">Updates</a>
     <a href="support.html">Support</a>
   </div>
