--- a/support.html
+++ b/support.html
@@ -12,8 +12,11 @@
     <a href="commands.html">Commands</a>
     <a href="games.html">Games</a>
     <a href="updates.html">Updates</a>
-    <a href="support.html">Support</a>
+    <a href="support.html" class="active">Support</a>
   </div>
 
   <div class="content">
     <h1 class="gradient-text">Welcome To The Support Page!</h1>
+
+</body>
+</html>
