--- a/updates.html
+++ b/updates.html
@@ -11,9 +11,13 @@
     <a href="index.html">Home</a>
     <a href="commands.html">Commands</a>
     <a href="games.html">Games</a>
-    <a href="updates.html">Updates</a>
+     <a href="updates.html" class="active">Updates</a>
     <a href="support.html">Support</a>
   </div>
 
    <div class="content">
     <h1 class="gradient-text">Welcome To The Updates Page!</h1>
+
+
+</body>
+</html>
