--- a/commands.html
+++ b/commands.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<link rel="stylesheet" href="style.css" />
+<head>
 <body>
   <div class="navbar">
     <a href="index.html">Home</a>
-    <a href="commands.html">Commands</a>
+    <a href="commands.html" class="active">Commands</a>
     <a href="games.html">Games</a>
     <a href="updates.html">Updates</a>
     <a href="support.html">Support</a>
   </div>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>M1 Bot Commands</title>
   <style>
     body {
