--- a/commands.html
+++ b/commands.html
@@ -9,7 +9,7 @@
 <body>
   <div class="navbar">
     <a href="index.html">Home</a>
-    <a href="commands.html" class="active">Commands</a>
+    <a href="commands.html" class="active">M1 Bot</a>
     <a href="games.html">Games</a>
     <a href="updates.html">Updates</a>
     <a href="support.html">Support</a>
