--- a/support.html
+++ b/support.html
@@ -9,7 +9,7 @@
 <body>
   <div class="navbar">
     <a href="index.html">Home</a>
-    <a href="commands.html">Commands</a>
+    <a href="commands.html">M1 Bot</a>
     <a href="games.html">Games</a>
     <a href="updates.html">Updates</a>
     <a href="support.html" class="active">Support</a>
