--- a/commands.html
+++ b/commands.html
@@ -33,6 +33,7 @@
     }
 
     .category {
+      text-align: center;
       background-color: #1a1a1a;
       border-left: 3px solid #00f2ff;
       margin-bottom: 40px;
@@ -47,6 +48,7 @@
     }
 
     .category h2 {
+      text-align: center;
       margin-top: 0;
       color: #00f2ff;
       border-bottom: 2px solid #7200fe;
@@ -54,6 +56,7 @@
     }
 
     .command {
+      text-align: center;
       margin-bottom: 20px;
     }
 
@@ -62,6 +65,7 @@
     }
 
     .command img {
+      text-align: center;
       width: 100%;
       max-width: 600px;
       border-radius: 5px;
@@ -85,6 +89,7 @@
       }
     }   
 .details-wrapper {
+  text-align: center;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.4s ease, padding 0.3s ease;
@@ -92,16 +97,19 @@
 }
 
 .details-wrapper.expanded {
+  text-align: center;
   max-height: 500px; /* enough to show all content */
   padding-top: 10px;
 }
 
 .details {
+  text-align: center;
   opacity: 0;
   transition: opacity 0.3s ease;
 }
 
 .details-wrapper.expanded .details {
+  text-align: center;
   opacity: 1;
 }
 
