--- a/commands.html
+++ b/commands.html
@@ -124,7 +124,7 @@ function toggleDetail(button) {
 </script>
 
   <h1> M1 Bot Commands</h1>
- <p style="color: #8264fb;">Tip, send "M1help" in a server with the Bot</p>
+ <p style="color: #8264fb; text-align: center;">Tip, send "M1help" in a server with the Bot</p>
 
 <!-- Moderation -->
 <div class="category">
