--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <div class="content">
     <h1 class="gradient-text">Welcome To The Homepage!</h1>
 <p class="gradient-text">Click on one of the options on the nav bar to see some of my worst creations!</p>
+
+<p class="gradient-text">This site isnt formated for big screens yet, try it out on mobile!</p>
   </div>
 </body>
 </html>
