--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1 class="gradient-text">Welcome To The Homepage!</h1>
 <p class="gradient-text">Click on one of the options on the nav bar to see some of my worst creations!</p>
 
-<p class="gradient-text">This site isnt formated for big screens yet, try it out on mobile!</p>
+<p class="gradient-text">This site isnt formatted for big screens yet, try it out on mobile!</p>
   </div>
 </body>
 </html>
