--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Home</title>
 <link rel="stylesheet" href="style.css" />
+  <style> 
+.fade-in {
+      opacity: 0;
+      animation: fadeIn 1s ease forwards;
+    }
+
+    .fade-out {
+      opacity: 1;
+      animation: fadeOut 1s ease forwards;
+    }
+
+    @keyframes fadeIn {
+      0% { opacity: 0; }
+      100% { opacity: 1; }
+    }
+
+    @keyframes fadeOut {
+      0% { opacity: 1; }
+      100% { opacity: 0; }
+    }</style>
 </head>
 <body>
   <div class="navbar">
@@ -21,5 +41,31 @@
 
 <p class="gradient-text">This site isnt formatted for big screens yet, try it out on mobile!</p>
   </div>
+
+
+ <script>
+    window.addEventListener("DOMContentLoaded", () => {
+      const content = document.querySelector(".content");
+
+      setTimeout(() => {
+        content.classList.add("fade-in");
+      }, 300); 
+    });
+
+    const links = document.querySelectorAll("a");
+    links.forEach(link => {
+      link.addEventListener("click", function (e) {
+        const content = document.querySelector(".content");
+        if (this.href && !this.href.includes("#")) {
+          e.preventDefault();
+          content.classList.remove("fade-in");
+          content.classList.add("fade-out");
+          setTimeout(() => {
+            window.location.href = this.href;
+          }, 500);
+        }
+      });
+    });
+  </script>
 </body>
 </html>
