--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Home</title>
 <link rel="stylesheet" href="style.css" />
   <style> 
+.content {
+  opacity: 0;
+}
 .fade-in {
       opacity: 0;
       animation: fadeIn 1s ease forwards;
