--- a/League./Index.html
+++ b/League./Index.html
@@ -28,6 +28,6 @@
     </section>
   </main>
 
-  <script src="/League./League.JS"></script>
+  <script src="/League./League.js"></script>
 </body>
 </html>
