--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <a href="games.html">Games</a>
     <a href="updates.html">Updates</a>
     <a href="support.html">Support</a>
+    <a href="League./Index.html">Support</a>
   </div>
 
   <div class="content">
