--- a/League./Index.html
+++ b/League./Index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>League Finder</title>
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="League./style.css" />
   <style>
     .center-box {
       display: flex;
