--- a/League./Index.html
+++ b/League./Index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>League Finder</title>
-  <link rel="stylesheet" href="League./style.css" />
+  <link rel="stylesheet" href="League./style.css"/>
   <style>
     .center-box {
       display: flex;
@@ -64,7 +64,7 @@
         alert("Please enter a League ID.");
         return;
       }
-      window.location.href = `/league/index.html?id=${encodeURIComponent(id)}`;
+      window.location.href = `/League./${encodeURIComponent(id)}`;
     }
   </script>
 </body>
