--- a/League./Index.html
+++ b/League./Index.html
@@ -64,7 +64,7 @@
         alert("Please enter a League ID.");
         return;
       }
-      window.location.href = `/League./${encodeURIComponent(id)}`;
+      window.location.href = `/Test.HTML-/League./${encodeURIComponent(id)}.json`;
     }
   </script>
 </body>
