--- a/League./Index.html
+++ b/League./Index.html
@@ -53,7 +53,7 @@
 <body>
   <div class="center-box">
     <h1>Find a League</h1>
-    <input type="text" id="league-id" placeholder="Enter League ID (e.g., league-12)" />
+    <input type="text" id="league-id" placeholder="Enter League ID (e.g., league-1)" />
     <button onclick="goToLeague()">View League</button>
   </div>
 
@@ -64,7 +64,7 @@
         alert("Please enter a League ID.");
         return;
       }
-      window.location.href = `/Test.HTML-/League./${encodeURIComponent(id)}.json`;
+      window.location.href = `/Test.HTML-/League./${encodeURIComponent(id)}.html`;
     }
   </script>
 </body>
