--- a/League./league-1.html
+++ b/League./league-1.html
@@ -30,11 +30,11 @@
     </section>
 
     <div style="text-align:center; margin-top:40px;">
-      <a href="/" class="back-button">← Back to Search</a>
+      <a href="League./Index.js" class="back-button">← Back to Search</a>
     </div>
   </main>
 
-  <script src="/js/league.js"></script>
+  <script src="/Test.HTML-/League./League.js"></script>
 </body>
 </html>
 
