--- a/League./league-1.html
+++ b/League./league-1.html
@@ -30,7 +30,7 @@
     </section>
 
     <div style="text-align:center; margin-top:40px;">
-      <a href="League./Index.js" class="back-button">← Back to Search</a>
+      <a href="League./Index.html" class="back-button">← Back to Search</a>
     </div>
   </main>
 
